--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-        <title>fr.leopoldo Anywar Secondary School</title>
+        <title>Blessed Comboni ss</title>
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     </head>
     <body>
@@ -28,7 +28,7 @@
                         <a class="nav-link" href="Aboutus.html">ABOUT US</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="../admission.html">Admission Application Form </a>
+                        <a class="nav-link" href="admission.html">Admission Application Form </a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="contact.html">CONTACT</a>
@@ -46,13 +46,6 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
 <body class="bg-success">
-    <div>
-        <nav>
-            <li> <a href="index.html">Home page</a></li>
-            <li> <a href="Aboutus.html">ABOUT US</a></li>
-            <li><a href="contact.html">CONTACT</a></li>
-        </nav>
-    </div>
     <div>
  <h1 class="bg-white">Welcome to Blessed Comboni Secondary School Website</h1>
 <div class=".container lg my-3 px-3 bg-warning round boader boader-danger">
