--- a/Aboutus.html
+++ b/Aboutus.html
@@ -7,7 +7,7 @@
     <title>ABOUT US</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
-<body>
+<body class="bg-success">
     
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <a class="navbar-brand" href="#"></a>
@@ -17,19 +17,19 @@
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item">
-                    <a class="nav-link" href="index.html">Home page</a>
+                    <a class="nav-link" href="index.html">HOME</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="Aboutus.html">ABOUT US</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="admission.html">Admission Application Form </a>
+                    <a class="nav-link" href="admission.html">ADMISSION</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="contact.html">CONTACT</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="pictorials.html">gallery</a>
+                    <a class="nav-link" href="Gallery/Pictorials.html">GALLERY</a>
                 </li>
             </ul>
         </div>
@@ -40,31 +40,44 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
   
-    <div>
-        <h1>Location</h1>
-        <p>Blessed Comboni SS is located in Kiryandongo District, Kigumba t.c, Kihura village </p>
-        <p>It is located along Kla-Gulu highway, 1 km off the highway</p>
-        <h2>Brief Details</h2>
-        <p>Blessed Comboni is a catholic founded mixed O and A level, Day and Boarding
-            school.
-        </p>
-        <p>We offer both Arts and  Sciences</p>
-        <p>Subjects offered includes;
-            <ul>Arts
-                <li>History</li>
-                <li>Geography</li>
-                <li>CRE</li>
-                <li>Commerce and Entrepreneurship</li>
-                <li>P.E</li>
-                <li>Fine Art</li>
-                Sciences
-                <li>Ennglish</li>
-                <li>Math</li>
-                <li>Biology</li>
-                <li>Chemistry</li>
-                <li>Physics</li>
-                <li>Agriculture</li>
-                <li>Food & Nutrition</li>
+    <div class="container-fluid">
+        <div class="bg-light mx-5 px-5">
+            <h1 class="text-dark  ">Location</h1>
+            <p>It is located along Kla-Gulu highway, 1 km off the highway <br>
+                In Kigumba town council, Kiryandongo District
+            </p>
+        </div>
+        <div class="mx-5 px-5">
+            <h2>Brief Details</h2>
+            <p>Blessed Comboni is a catholic founded mixed O and A level, Day and Boarding
+                school. <br>
+                It is registered under the ministry of education and sport. <br>
+                Its registration number is U1388 <br> 
+                We offer both Arts and  Sciences
+            </p>
+        </div>
+            <ul class="row">
+                <div class="container-fluid text-light bg-secondary px-5 ">
+                    <p class="text-dark display-4" style="font-style: oblique;">Subjects offered includes;</p>
+                    <center><strong><h1 class="text-warning bg-dark">Arts</h1></strong></center>
+                    <li>History</li>
+                    <li>Geography</li>
+                    <li>CRE</li>
+                    <li>Commerce and Entrepreneurship</li>
+                    <li>P.E</li>
+                    <li>Fine Art</li>
+
+                <center><strong><h1 class="text-warning bg-dark">Sciences</h1></strong></center>
+                    <div class="text-primary">
+                        <li>English</li>
+                        <li>Math</li>
+                        <li>Biology</li>
+                        <li>Chemistry</li>
+                        <li>Physics</li>
+                        <li>Agriculture</li>
+                        <li>Food & Nutrition</li>
+                    </div>
+            </div>
             </ul>
         </p>
     </div>
