--- a/admission.html
+++ b/admission.html
@@ -18,19 +18,19 @@
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item">
-                    <a class="nav-link" href="index.html">Home page</a>
+                    <a class="nav-link" href="index.html">HOME</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="Aboutus.html">ABOUT US</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="admission.html">Admission Application Form </a>
+                    <a class="nav-link" href="admission.html">ADMISSION </a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="contact.html">CONTACT</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="pictorials.html">gallery</a>
+                    <a class="nav-link" href="Gallery/Pictorials.html">GALLERY</a>
                 </li>
             </ul>
         </div>
@@ -40,7 +40,7 @@
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <div class="container mt-5">
+    <div class="container mt-1 my-1 bg-secondary">
         <h2>Admission Application Form</h2>
         <form>
             <div class="form-group">
