--- a/Gallery/Pictorials.html
+++ b/Gallery/Pictorials.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>gallery</title>
+    <link rel="shotcut icon" type="image/png" href="favicon.png">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <style>
         img{
@@ -46,7 +47,7 @@ position: relative;
             </div>
         </nav> 
     </div>
-<div class="container mt-5">
+<div class="container-lg mt-5">
     <div class="row div">
         <div class="col-12 col-sm-4 col-lg-4 div">
             <img src="COMP.jpg" alt="1">
