--- a/contact.html
+++ b/contact.html
@@ -10,6 +10,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CONTACT</title>
+    <link rel="shotcut icon" type="image/png" href="Gallery/favicon.png">
     <style>
         img{
             height: 100px;
@@ -20,6 +21,8 @@
             margin: 0px;
         }
     </style>
+    
+
 </head>
 <body>
 
