--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <title>H0ME</title>
+    <link rel="shotcut icon" type="image/png" href="Gallery/favicon.png">
     <style>
       .carousel-item{
         height: 100vh;
@@ -104,9 +105,9 @@
               <h2>MISSION</h2>
               <P>"To instill morals and quality Education in our future generation"</P>
               <h3>VISION</h3>
-    <p>Having a God Fearing generation</p>
-    <h4>School Motto</h4>
-    <P>WITH EFFORT TO GLORY</P>
+              <p>Having a God Fearing generation</p>
+              <h4>School Motto</h4>
+             <P>WITH EFFORT TO GLORY</P>
               <center><strong><p class="H4">STUDENTS ON A TRIP</p></strong></center>
             </div>
           </div>
