--- a/Gallery/Pictorials.html
+++ b/Gallery/Pictorials.html
@@ -41,7 +41,7 @@ position: relative;
                         <a class="nav-link" href="../contact.html">CONTACT</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="pictorials.html">GALLERY</a>
+                        <a class="nav-link" href="Pictorials.html">GALLERY</a>
                     </li>
                 </ul>
             </div>
